# VASAV-at-work

./: README.md  VASAV_notes.txt  pyproject.toml  requirements.txt
HOW03/: HOW03_minL_load_iter1.xlsm  bearing_graph_dash.py  collect_UR_Lmin.py  extract_results.py  extract_results_improved.py  minimum_penetration_plot.py
HOW04/: main_plot_soil_profile.py  plot_maps_BAFO.py  plot_soil_penetration.py
