[project]
name = "vasav-at-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "et-xmlfile==2.0.0",
    "narwhals==2.10.2",
    "numpy==2.3.4",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "pathlib==1.0.1",
    "pdtable==1.0.1",
    "plotly==6.4.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scipy==1.16.3",
    "six==1.17.0",
    "tzdata==2025.2",
    "xlrd==2.0.2",
    # Bearing graph dashboard (NEW)
    "dash==3.3.0",
    "dash-bootstrap-components==1.4.1",
    "Flask==3.1.2",
    "Werkzeug==3.1.3",
]
